--- a/requirements.txt
+++ b/requirements.txt
@@ -52,6 +52,7 @@ pypng==0.20220715.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-slugify==8.0.4
+pytube==15.0.0
 PyYAML==6.0.2
 qrcode==7.4.2
 repath==0.9.0
